src/test/resources/regressions/features/sequences/seq-literal-fail6.gobra
package pkg

func foo() {
  // error: overlapping keys
  //:: ExpectedOutput(type_error)
  ghost s := seq[int] { 1:42, 12 }
}
